--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,21 @@ services:
   backend_service:
     build: .
     env_file:
-      - .env
+      - env/.env.prod
     ports:
       - "8000:8000"
     depends_on:
       - postgres_service
+    command: >
+      sh -c "uv run python manage.py migrate &&
+      uv run python manage.py collectstatic --noinput"
+                  
 
   postgres_service:
     image: postgres:alpine
     environment:
       - POSTGRES_PASSWORD=1
       - POSTGRES_DB=open_shop
-      - POSTGRES_USER=postgres
     ports:
       - "5432:5432"
     volumes:
