--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.12"
 dependencies = [
     "django>=5.2.7",
     "django-jazzmin>=3.0.1",
+    "django-mptt>=0.18.0",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
     "dotenv>=0.9.9",
