--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,10 @@ services:
     depends_on:
       - postgres_service
     command: >
-      sh -c "uv run python manage.py migrate &&
-      uv run python manage.py collectstatic --noinput"
+        sh -c "uv run python manage.py makemigrations &&
+        uv run python manage.py migrate &&
+        uv run python manage.py collectstatic --noinput &&
+        uv run python manage.py runserver 0.0.0.0:8000"
                   
 
   postgres_service:
@@ -18,7 +20,7 @@ services:
       - POSTGRES_PASSWORD=1
       - POSTGRES_DB=open_shop
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
 
