--- a/env/.env.example
+++ b/env/.env.example
@@ -1,6 +1,6 @@
 POSTGRES_DB='your_db_name'
 POSTGRES_USER='your_user_name'
-POSTGRES_PASSWORD='1'
+POSTGRES_PASSWORD='your_postgres_password'
 POSTGRES_HOST='postgres_service'
 POSTGRES_PORT='5432'
 EMAIL_HOST_USER='your_email'
