--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,3 +46,21 @@ volumes:
 # docker compose exec -it backend_service sh -c 'uv run python3 manage.py migrate'
 # docker compose exec -it backend_service sh -c 'uv run python3 manage.py createsuperuser'
 
+# docker compose up --scale backend_service=3
+# docker compose up --build -d
+# docker compose up -d
+# docker compose restart service_name
+# docker compose stop
+# docker compose down
+# docker compose down -v
+# docker logs -f container_name
+# docker compose logs -f container_name
+# docker compose stop backend_service
+# docker compose ps -aCreate
+# docker exec -itu postgres postgres_yangi psql -c 'create database online_pdp_db;'
+# docker compose exec -itu postgres postgres_service psql -c 'create database online_pdp_db;'
+# docker compose start backend_service
+# docker compose exec -it backend_service sh
+# docker compose exec -it backend_service sh -c 'uv run python3 manage.py migrate'
+# docker compose exec -it backend_service sh -c 'uv run python3 manage.py createsuperuser'
+
