--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "djangorestframework-simplejwt>=5.5.1",
     "dotenv>=0.9.9",
     "drf-spectacular>=0.28.0",
+    "faker>=37.11.0",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.11",
 ]
