--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.12"
 dependencies = [
-    "django>=5.2.7",
+    "django[argon2]>=5.2.7",
     "django-ckeditor-5>=0.2.18",
     "django-jazzmin>=3.0.1",
     "django-mptt>=0.18.0",
